Add color in overview for price update, add selection on which file to scan